refactor: update product-service (rename dtos, add logging, add request validation)