@@ -1,8 +1,8 @@
 package com.bohdanzhuvak.productservice.service;
 
-import com.bohdanzhuvak.productservice.dto.ProductCreateDTO;
-import com.bohdanzhuvak.productservice.dto.ProductDTO;
-import com.bohdanzhuvak.productservice.exceptions.NotFoundException;
+import com.bohdanzhuvak.productservice.dto.ProductRequest;
+import com.bohdanzhuvak.productservice.dto.ProductResponse;
+import com.bohdanzhuvak.productservice.exceptions.ProductNotFoundException;
 import com.bohdanzhuvak.productservice.model.Category;
 import com.bohdanzhuvak.productservice.model.Product;
 import com.bohdanzhuvak.productservice.repository.CategoryRepository;
@@ -12,7 +12,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,47 +20,42 @@ public class ProductService {
   private final ProductRepository productRepository;
   private final CategoryRepository categoryRepository;
 
-  public void createProduct(ProductCreateDTO productCreateDTO) {
+  public ProductResponse createProduct(ProductRequest productRequest) {
+    Category category = categoryRepository.findById(productRequest.categoryId()).orElseThrow(() -> new ProductNotFoundException("Category " + productRequest.categoryId() + " not found"));
     Product product = Product.builder()
-            .name(productCreateDTO.getName())
-            .description(productCreateDTO.getDescription())
-            .categoryId(productCreateDTO.getCategoryId())
-            .price(productCreateDTO.getPrice())
+            .name(productRequest.name())
+            .description(productRequest.description())
+            .category(category)
+            .price(productRequest.price())
             .build();
 
-    productRepository.save(product);
+    product = productRepository.save(product);
     log.info("Product {} is saved", product.getId());
+    return mapToProductResponse(product);
   }
 
-  public ProductDTO getProduct(String productId) {
-    Product product = productRepository.findById(productId)
-            .orElseThrow(() -> new NotFoundException("Product " + productId + " not found"));
-    log.info("Found product: {}", productId);
-
-    Category category = categoryRepository.findById(product.getCategoryId())
-            .orElseThrow(() -> new NotFoundException("Category " + product.getCategoryId() + " not found"));
-    log.info("Found category: {}", product.getCategoryId());
-
-    return mapToProductDTO(product, category);
+  public ProductResponse getProductById(String productId) {
+    ProductResponse productResponse = productRepository.findById(productId).map(this::mapToProductResponse)
+            .orElseThrow(() -> new ProductNotFoundException("Product " + productId + " not found"));
+    log.info("Product {} is found", productId);
+    return productResponse;
   }
 
-  public List<ProductDTO> getAllProducts() {
+  public List<ProductResponse> getAllProducts() {
     List<Product> products = productRepository.findAll();
-
+    log.info("Retrieved {} products", products.size());
     return products.stream()
-            .map(product -> {
-              Category category = categoryRepository.findById(product.getCategoryId())
-                      .orElseThrow(() -> new NotFoundException("Category " + product.getCategoryId() + " not found"));
-              return mapToProductDTO(product, category);
-            })
-            .collect(Collectors.toList());
+            .map(this::mapToProductResponse)
+            .toList();
   }
 
   private ProductDTO mapToProductDTO(Product product, Category category) {
     return ProductDTO.builder()
+  private ProductResponse mapToProductResponse(Product product) {
+    return ProductResponse.builder()
             .id(product.getId())
             .name(product.getName())
-            .category(category.getName())
+            .category(product.getCategory().getName())
             .description(product.getDescription())
             .price(product.getPrice())
             .build();
